fix: card size on mobile

--- a/src/components/Blible/styles.module.css
+++ b/src/components/Blible/styles.module.css
@@ -61,8 +61,32 @@
   background: transparent;
 }
 
-@media (max-width:690px) {
+@media (max-width:470px) {
   .slides {
     grid-auto-columns: 90%;
   }
+
+  .blogLead {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 125%;
+    color: #334248;
+  }
+
+  .blogTitle {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 125%;
+    color: #001C26;
+  }
+
+  .blobLink {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    font-size: 10px;
+    color: #008BC5;
+  }
+
 }
